--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,8 +1,8 @@
 {
     "githubUsername": "GitHub-weiself",
-    "blogTitle": "Laziji",
-    "blogDescribe": "欢迎来到辣子鸡的个人博客。",
-    "htmlTitle": "辣子鸡的博客",
+    "blogTitle": "Weiself",
+    "blogDescribe": "欢迎来到Wei的个人博客。",
+    "htmlTitle": "Wei的博客",
     "fontColor": "#ffffff",
     "useBackgroundImage": false,
     "backgroundColorLeft": "#2690F9",
