--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,5 +1,5 @@
 {
-    "githubUsername": "GitHub-weiself",
+    "githubUsername": "weiself",
     "blogTitle": "Weiself",
     "blogDescribe": "欢迎来到Wei的个人博客。",
     "htmlTitle": "Wei的博客",
